# av-sensor-pipeline

./: CMakeLists.txt  README.md
include/: pipeline.hpp  ring_buffer.hpp  sensor_message.hpp  sensor_producer.hpp  watchdog.hpp
src/: main.cpp  pipeline.cpp  sensor_producer.cpp  watchdog.cpp
tests/: test_ring_buffer.cpp  test_watchdog.cpp
